--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,9 +1,9 @@
 {% extends "blog/base.html" %}
 
-{% block title %}My Blog{% endblock %}
+{% block title %}Machaira{% endblock %}
 
 {% block content %}
-  <h1>My Blog</h1>
+  <h1>Machaira</h1>
   {% for post in posts %}
     <h2>
       <a href="{{ post.get_absolute_url }}">
@@ -15,5 +15,5 @@
     </p>
     {{ post.body|truncatewords:30|linebreaks }}
   {% endfor %}
-  {% include "pagination.html" with page=page_obj %}
+  {% include "pagination.html" with page=posts %}
 {% endblock %}
